# robot_design_lab_20_21

./: README.md
rdl_commands/: worksheet2.conf  worksheet3.conf  worksheet3.txt  worksheet5.conf  worksheet5.txt
rdl_image_processing/: CMakeLists.txt  package.xml
rdl_image_processing/src/: image_processing.py
rdl_sim_worlds/: package.xml
rdl_turtlebot3_bringup_sim/launch/: robot.launch
rdl_turtlebot3_description/urdf/: turtlebot3_simplified_burger.gazebo.xacro  turtlebot3_simplified_burger.urdf.xacro
rdl_turtlebot3_navigation/config/: navigation.rviz
rdl_turtlebot3_navigation/launch/: amcl.launch  base_controller.launch  mapping.launch  odometry.launch
rdl_turtlebot3_navigation/scripts/: base_controller.py  message_passing.py  odometry.py
